Commit_023: der "LAY" - Button wird erst sichtbar, wenn das Kartendeck mindestens 1 Mal geshuffelt wurden & Kleinigkeiten

--- a/app/src/main/res/layout/fragment_simpl_path.xml
+++ b/app/src/main/res/layout/fragment_simpl_path.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cards.cardsUI.cardReadings.littleCross.LittleCrossFragment">
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/laying_are_cv"
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card01CV"
             app:layout_constraintEnd_toEndOf="@+id/card01CV"
             app:layout_constraintStart_toStartOf="@+id/card01CV" />
@@ -44,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card02CV"
             app:layout_constraintEnd_toEndOf="@+id/card02CV"
             app:layout_constraintStart_toStartOf="@+id/card02CV" />
@@ -62,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card04CV"
             app:layout_constraintEnd_toEndOf="@+id/card04CV"
             app:layout_constraintStart_toStartOf="@+id/card04CV" />
@@ -171,6 +174,7 @@
             android:layout_marginTop="28dp"
             android:layout_marginEnd="44dp"
             android:text=" LAY"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
