--- a/app/src/main/res/layout/fragment_path_of_wisdom.xml
+++ b/app/src/main/res/layout/fragment_path_of_wisdom.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cards.cardsUI.cardReadings.littleCross.LittleCrossFragment">
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/laying_are_cv"
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card01CV"
             app:layout_constraintEnd_toEndOf="@+id/card01CV"
             app:layout_constraintStart_toStartOf="@+id/card01CV" />
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card02CV"
             app:layout_constraintEnd_toEndOf="@+id/card02CV"
             app:layout_constraintStart_toStartOf="@+id/card02CV" />
@@ -54,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card03CV"
             app:layout_constraintEnd_toEndOf="@+id/card03CV"
             app:layout_constraintStart_toStartOf="@+id/card03CV" />
@@ -73,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card04CV"
             app:layout_constraintEnd_toEndOf="@+id/card04CV"
             app:layout_constraintStart_toStartOf="@+id/card04CV" />
@@ -92,6 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card05CV"
             app:layout_constraintEnd_toEndOf="@+id/card05CV"
             app:layout_constraintStart_toStartOf="@+id/card05CV" />
@@ -111,6 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card06CV"
             app:layout_constraintEnd_toEndOf="@+id/card06CV"
             app:layout_constraintStart_toStartOf="@+id/card06CV" />
@@ -130,6 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="7"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card07CV"
             app:layout_constraintEnd_toEndOf="@+id/card07CV"
             app:layout_constraintStart_toStartOf="@+id/card07CV" />
@@ -181,7 +188,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#A2C0F6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/card01CV"
             app:layout_constraintStart_toStartOf="parent"
@@ -211,7 +218,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#A2C0F6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/card01CV"
             app:layout_constraintHorizontal_bias="0.523"
@@ -242,7 +249,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#A2C0F6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/card01CV"
             app:layout_constraintHorizontal_bias="0.523"
@@ -273,7 +280,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#B2D56F"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.538"
@@ -305,7 +312,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#B2D56F"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
@@ -337,7 +344,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
+            app:cardBackgroundColor="#B2D56F"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.472"
@@ -363,6 +370,32 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/presentTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="132dp"
+            android:text="present"
+            android:textStyle="bold"
+            android:textColor="#5381D5"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/futureTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="132dp"
+            android:text="future"
+            android:textStyle="bold"
+            android:textColor="#71A116"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.77"
+            app:layout_constraintStart_toEndOf="@+id/presentTV"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -384,20 +417,11 @@
             android:layout_marginTop="28dp"
             android:layout_marginEnd="44dp"
             android:text=" LAY"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/backCardIV"
-            android:layout_width="71dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="4dp"
-            android:src="@drawable/back_02"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/layCardsBTN"
-            app:layout_constraintHorizontal_bias="0.817"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
