--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,9 +60,16 @@
 
     <fragment
         android:id="@+id/simplPathFragment"
-        android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.simplePathFrag.simplPathFragment"
+        android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.simplePathFrag.SimplPathFragment"
         android:label="fragment_simpl_path"
-        tools:layout="@layout/fragment_simpl_path" />
+        tools:layout="@layout/fragment_simpl_path" >
+        <action
+            android:id="@+id/action_simplPathFragment_to_oneCardFragment"
+            app:destination="@id/oneCardFragment" />
+    </fragment>
+
+
+
     <fragment
         android:id="@+id/littleCrossFragment"
         android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.littleCross.LittleCrossFragment"
