Commit_024: bissle aufgeräumt und alle drei Fragmente vollständig angepasst (Karten sind nun größer, wie Lars zutreffend empfohlen hat). - Mit dem nächsten "MeaningsFragment" experimentiert/angefangen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -62,11 +62,7 @@
         android:id="@+id/simplPathFragment"
         android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.simplePathFrag.SimplPathFragment"
         android:label="fragment_simpl_path"
-        tools:layout="@layout/fragment_simpl_path" >
-        <action
-            android:id="@+id/action_simplPathFragment_to_oneCardFragment"
-            app:destination="@id/oneCardFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_simpl_path" />
 
 
 
