--- a/app/src/main/res/layout/fragment_little_cross.xml
+++ b/app/src/main/res/layout/fragment_little_cross.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".cards.cardsUI.cardReadings.littleCross.LittleCrossFragment">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/laycards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutDescription="@xml/fragment_little_cross_xml_laycards_scene">
+        android:layout_height="wrap_content">
+        <!-- app:layoutDescription="@xml/fragment_little_cross_xml_laycards_scene" -->
+
 
         <Button
             android:id="@+id/layCrossBTN"
@@ -19,27 +21,16 @@
             android:layout_marginTop="28dp"
             android:layout_marginEnd="44dp"
             android:text=" LAY"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/backCardIV"
-            android:layout_width="71dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="4dp"
-            android:src="@drawable/back_02"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/layCrossBTN"
-            app:layout_constraintHorizontal_bias="0.817"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/shuffle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutDescription="@xml/fragment_little_cross_xml_shuffle_scene">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/shuffleCross"
@@ -53,7 +44,7 @@
 
         <ImageView
             android:id="@+id/rotatingCardIV"
-            android:layout_width="71dp"
+            android:layout_width="70dp"
             android:layout_height="100dp"
             android:layout_marginTop="4dp"
             android:src="@drawable/back_02"
@@ -61,7 +52,7 @@
             app:layout_constraintHorizontal_bias="0.154"
             app:layout_constraintStart_toEndOf="@+id/shuffleCross"
             app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,35 +60,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card02CV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="212dp"
-            android:outlineAmbientShadowColor="#AC6EF3"
-            app:cardBackgroundColor="#E8C7F6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/card2IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
-                android:padding="4dp"
-                android:src="@drawable/p05"
-                android:visibility="invisible" />
-
-            <ImageView
-                android:id="@+id/back02IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
-                android:padding="4dp"
-                android:src="@drawable/back_02"
-                android:visibility="invisible" />
-
-        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/card01TV"
@@ -113,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card01CV"
             app:layout_constraintEnd_toEndOf="@+id/card01CV"
             app:layout_constraintStart_toStartOf="@+id/card01CV" />
@@ -140,6 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card02CV"
             app:layout_constraintEnd_toEndOf="@+id/card02CV"
             app:layout_constraintStart_toStartOf="@+id/card02CV" />
@@ -149,6 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card03CV"
             app:layout_constraintEnd_toEndOf="@+id/card03CV"
             app:layout_constraintStart_toStartOf="@+id/card03CV" />
@@ -172,6 +137,35 @@
             app:layout_constraintStart_toStartOf="@+id/card04CV" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card02CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="212dp"
+            android:outlineAmbientShadowColor="#AC6EF3"
+            app:cardBackgroundColor="#E8C7F6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/card2IV"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
+                android:padding="4dp"
+                android:src="@drawable/p05"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back02IV"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/card01CV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,16 +179,16 @@
 
             <ImageView
                 android:id="@+id/card1IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/s01"
                 android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/back01IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/back_02"
                 android:visibility="invisible" />
@@ -213,17 +207,17 @@
             app:layout_constraintTop_toTopOf="@+id/card02CV">
 
             <ImageView
-                android:id="@+id/card3IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:id="@+id/card03IV"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/p05"
                 android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/back03IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/back_02"
                 android:visibility="invisible" />
@@ -243,16 +237,16 @@
 
             <ImageView
                 android:id="@+id/card04IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/m08_strength"
                 android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/back04IV"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
+                android:layout_width="74dp"
+                android:layout_height="120dp"
                 android:padding="4dp"
                 android:src="@drawable/back_02"
                 android:visibility="invisible" />
