--- a/app/src/main/res/layout/fragment_simpl_path.xml
+++ b/app/src/main/res/layout/fragment_simpl_path.xml
@@ -155,6 +155,17 @@
                 android:visibility="invisible" />
 
         </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/interpretationBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="INTERPRETATION"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card02TV" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
