Commit_025: Finales Feature: Beim Anklicken auf eine Karte im MeaningFragment (Kartendeutung), wird auf die Bedeutung der jeweiligen Karte navigiert (wieder: OneCardFragment reused, wie bei Tageskarte oder der RV). Wochenziel erreicht! Das Prinzip kann jetzt auf andere Auslegearten angewandt werden, und/oder optimiert werden.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -84,6 +84,9 @@
         <argument
             android:name="card01ID"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_cardMeaningFragment_to_oneCardFragment"
+            app:destination="@id/oneCardFragment" />
     </fragment>
 
 
