Commit_026: Das größte KartenlegeFragment "ThePathOfWisdom" gebaut und implementiert. Sowie mit dem entsprechenden "OneCardFragment" gekoppelt. Alles läuft wie am Schnürchen, auch wenn das mit dem Design bzw. richtigen Daten-Übermittlungen anfangs ein bisschen haperte.

--- a/app/src/main/res/layout/fragment_path_of_wisdom.xml
+++ b/app/src/main/res/layout/fragment_path_of_wisdom.xml
@@ -397,6 +397,17 @@
             app:layout_constraintStart_toEndOf="@+id/presentTV"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/interpretataionBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="128dp"
+            android:text="INTERPRETE"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/card01CV"
+            app:layout_constraintStart_toStartOf="@+id/card01CV"
+            app:layout_constraintTop_toBottomOf="@+id/description01TV" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
