--- a/app/src/main/res/layout/fragment_little_cross.xml
+++ b/app/src/main/res/layout/fragment_little_cross.xml
@@ -253,6 +253,17 @@
 
         </androidx.cardview.widget.CardView>
 
+        <Button
+            android:id="@+id/interpeteBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="INTERPRETATION"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card03TV" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
